# rdb

./: .gitignore  README.md  justfile  main.py  pyproject.toml
rdb/: __init__.py  db.py  http.py  server.py
tests/: test_db.py
