[tool.poetry]
name = "rdb"
version = "0.1.0"
description = ""
authors = ["Jatinderjit Singh <jatinderjit89@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ipython = "^8.16.1"
isort = "^5.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
